<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="APP1">POPULAR MOIVES</string>
    <string name="APP2">STOCK HAWK</string>
    <string name="APP3">BULID IT BIGGER</string>
    <string name="APP5">MAKE YOUR APP MATERIAL</string>
    <string name="APP6">GO UBIQUITOUS</string>
    <string name="APP4">CAPSTONE</string>
</resources>
